Fix alignment of session name in single speaker page.

--- a/source/assets/stylesheets/_components.speaker.scss
+++ b/source/assets/stylesheets/_components.speaker.scss
@@ -77,7 +77,10 @@
 
   #speaker-session-names {
 
-    @include list-reset();
+    //@include list-reset();
+    padding-left: 1rem;
+    padding-right: 1rem;
+    margin-left: auto;
 
   }
 
